# black_oil_framework

./: README.md  pyproject.toml
docs/: dead_oil_stage.md  development_roadmap.md  live_oil_conservative_ad_stage.md  live_oil_next_step.md  live_oil_phase_switching_stage.md  live_oil_saturated_stage.md  mathematical_model.md  numerical_method.md  step5a_gravity_capillary_well_controls.md  step5b_sparse_newton_krylov.md  step5c_2d_heterogeneous_validation.md  step5d_schedules_restarts_field_controls.md  step6a_3d_mesh_cornerpoint_preparation.md  step6b_3d_property_mapping_faults_wells.md  step6c_3d_visualization_export.md  step7_integrated_full_3d_black_oil.md
example_01_single_phase/: single_phase_results.npz  single_phase_timestep_report.csv
examples/: 01_single_phase_pressure_diffusion.py  02_two_phase_water_oil_fully_implicit.py  03_dead_oil_compressible.py  03_dead_oil_template.py  04_live_oil_black_oil_template.py  04_live_oil_saturated_black_oil.py  05_live_oil_phase_switching_black_oil.py  06_live_oil_conservative_ad_black_oil.py  07_live_oil_gravity_capillary_controls.py  08_live_oil_sparse_newton_krylov.py  09_2d_heterogeneous_black_oil.py  10_scheduled_field_controls_restart.py  11_3d_mesh_property_visualization.py  12_3d_property_fault_well_model.py  13_3d_visualization_export_diagnostics.py  14_full_3d_black_oil_integrated.py  run_all.py
scripts/: plot_two_phase_results.py
tests/: conftest.py  test_flux.py  test_grid.py  test_live_oil.py  test_phase_switching.py  test_pvt_dead_oil.py  test_relperm.py  test_residual_shapes.py  test_step4c_ad.py  (+8 more)
(+116 files in other folders)
